@@ -10,7 +10,6 @@ package org.opendaylight.openflowjava.protocol.impl.deserialization.factories;
 import io.netty.buffer.ByteBuf;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.junit.Test;
 import org.opendaylight.openflowjava.protocol.api.keys.MessageCodeKey;
@@ -18,19 +17,18 @@ import org.opendaylight.openflowjava.protocol.api.util.EncodeConstants;
 import org.opendaylight.openflowjava.protocol.impl.util.BufferHelper;
 import org.opendaylight.openflowjava.protocol.impl.util.DefaultDeserializerFactoryTest;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.protocol.rev130731.BarrierInput;
+import org.opendaylight.yangtools.yang.common.Uint8;
 
 /**
  * Test for {@link org.opendaylight.openflowjava.protocol.impl.deserialization.factories.BarrierInputMessageFactory}.
  * @author giuseppex.petralia@intel.com
  */
 public class BarrierInputMessageFactoryTest extends DefaultDeserializerFactoryTest<BarrierInput> {
-
-
     /**
      * Initializes deserializer registry and lookups OF13 deserializer.
      */
     public BarrierInputMessageFactoryTest() {
-        super(new MessageCodeKey(EncodeConstants.OF13_VERSION_ID, 20, BarrierInput.class));
+        super(new MessageCodeKey(EncodeConstants.OF_VERSION_1_3, 20, BarrierInput.class));
     }
 
     /**
@@ -38,16 +36,16 @@ public class BarrierInputMessageFactoryTest extends DefaultDeserializerFactoryTe
      */
     @Test
     public void testVersions() {
-        List<Byte> versions = new ArrayList<>(Arrays.asList(
-                EncodeConstants.OF13_VERSION_ID,
-                EncodeConstants.OF14_VERSION_ID,
-                EncodeConstants.OF15_VERSION_ID
+        List<Uint8> versions = new ArrayList<>(Arrays.asList(
+                EncodeConstants.OF_VERSION_1_3,
+                EncodeConstants.OF_VERSION_1_4,
+                EncodeConstants.OF_VERSION_1_5
         ));
         ByteBuf bb = BufferHelper.buildBuffer();
         testHeaderVersions(versions, bb);
 
         // OFP v1.0 need to be tested separately cause of different message type value
-        messageCodeKey = new MessageCodeKey(EncodeConstants.OF10_VERSION_ID, 18, BarrierInput.class);
-        testHeaderVersions(Collections.singletonList(EncodeConstants.OF10_VERSION_ID), bb);
+        messageCodeKey = new MessageCodeKey(EncodeConstants.OF_VERSION_1_0, 18, BarrierInput.class);
+        testHeaderVersions(List.of(EncodeConstants.OF_VERSION_1_0), bb);
     }
 }
